# IANUA

./: .env.example  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  00_Project_Charter.md  01_Architecture.md  02_90_Day_Roadmap.md  03_Agent_Blueprints.md  04_Environment_Setup.md  05_Governance_Rules.md  06_Portfolio_Tracker.md  07_First_Build_Sprint.md  08_Codex_Review_Workflow.md  09_Master_Architecture_Blueprint.md  AGENTS.md  CONTRIBUTING.md  DESIGN.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  tailwind.theme.json  theme.css
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  security_report.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-automerge.yml  pages.yml  python-ci.yml  rename-to-ianua.yml  security-scan.yml
.streamlit/: config.toml
agent-suites/: README.md
agents/: __init__.py  business_proposal_agent.py  detection_matcher_agent.py  executive_assistant_agent.py  incident_report_agent.py  knowledge_base_agent.py  knowledge_curator_agent.py  legal_compliance_agent.py  mitre_mapper_agent.py  orchestrator_agent.py  portfolio_documentation_agent.py  soc_analyst_agent.py  threat_intel_agent.py  vulnerability_assessment_agent.py
agents/policies/: __init__.py  approval.py  audit.py  bundle.py  policy.json  signing.py
agents/roles/: __init__.py  definitions.py
agents/tools/: guarded.py  llm.py  pdf_report.py  validation.py
ai_operator_cyber_command_center.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
architecture/: SYSTEM_MAP.md
cli/: batch_run_incidents.py  run_incident.py
dashboard/: __init__.py  activity_timeline.html  agent_roster.html  app.py  escalations.py  kb_search.py  mission_control.html  ollama_service.py  system_health.py
dashboards/: DASHBOARD_CONCEPT.md
detections/: README.md
detections/sigma/: account_created_then_privileged.yml  firewall_block.yml  firewall_block_burst.yml  linux_account_added_to_privileged_group.yml  linux_command_history_cleared.yml  linux_local_account_created.yml  ssh_brute_force.yml  ssh_bruteforce_then_success.yml  ssh_failed_password.yml  ssh_successful_root_login.yml
docs/: Changelog.md  DESIGN_MD_IMPLEMENTATION.md  ENGINEERING_LOG.md  HARDENING_ROADMAP.md  MITRE_MAPPER_AGENT_DESIGN.md  PHASE_2_AI_OPERATOR_LAB.md  POLICY_AND_AUDIT.md  PROJECT_STATUS.md  USAGE_GUIDE.md  V1_RELEASE_NOTES.md  index.html  status.data.json  status.html  status.json
docs/agents/: BUSINESS_PROPOSAL_AGENT.md  EXECUTIVE_ASSISTANT_AGENT.md  INCIDENT_REPORT_AGENT.md  KNOWLEDGE_CURATOR_AGENT.md  LEGAL_COMPLIANCE_AGENT.md  PORTFOLIO_DOCUMENTATION_AGENT.md  VULNERABILITY_ASSESSMENT_AGENT.md
docs/case-studies/: README.md  agent-trust-broker-gate.md  detection-matcher-and-orchestrator.md  incident-report-agent.md  knowledge-base-agent.md  mcp-server.md  mitre-mapper-agent.md  policy-and-audit.md  rag-pipeline.md  soc-analyst-v0.2.md  threat-intel-agent.md  vulnerability-assessment-agent.md
docs/dashboard/: STREAMLIT_DASHBOARD.md
infra/: README.md  docker-compose.yml
knowledge-base/cis/: cis_controls_overview.md
knowledge-base/cybersecurity/: soc_fundamentals.md
knowledge-base/mitre/: enterprise_attack_overview.md
knowledge-base/nist/: csf_2_overview.md
knowledge-base/owasp/: top_10_overview.md
knowledge-base/security-plus/: security_plus_domains.md
mcp/: broker.py  server.py  transport.py
mcp/sandbox/: README.md  __init__.py
portfolio/: 12_Month_Portfolio_Roadmap.md  PROJECT_OVERVIEW.md  case_study_soc_analyst_v0.2.md
portfolio/SCREENSHOTS/: SCREENSHOT_CHECKLIST.md
prompts/: soc_analysis_prompt.md
qdrant_storage/: raft_state.json
rag/: citations.py  embeddings.py  ingest.py  qdrant.py  retrieve.py  vector_store.py
reports/markdown/: orchestrated_incident.md  sample_incident_report.md
research/: README.md
sample-logs/: structured_events.json
scripts/: ask_cyber_kb.py  ask_cyber_kb_chunked_ollama.py  ask_cyber_kb_ollama.py  audit_maintenance.py  audit_verify.py  build_status_page.py  check_locks.py  convert_report_to_pdf.py  create_cyber_collection.py  generate_docs_from_design.py  generate_sbom.py  ingest_cyber_kb.py  ingest_cyber_kb_chunked.py  rag_cli.py  refresh_locks.py  rename_to_ianua.py  search_cyber_kb.py  search_cyber_kb_chunked.py  test_embeddings_qdrant.py
security/: DATA_CLASSIFICATION.md
security/sbom/: README.md  VULN_TRIAGE.md  npm.cdx.json  python.cdx.json  sbom.cdx.json
tests/: conftest.py  test_agent_roles.py  test_business_proposal_agent.py  test_detection_matcher_agent.py  test_detections.py  test_executive_assistant_agent.py  test_incident_report_agent.py  test_knowledge_base_agent.py  test_knowledge_curator_agent.py  test_legal_compliance_agent.py  test_mitre_mapper_agent.py  test_ollama_generator.py  test_orchestrator_agent.py  test_portfolio_documentation_agent.py  test_soc_analyst_agent.py  test_threat_intel_agent.py  test_vulnerability_assessment_agent.py
tests/integration/: test_rag_cli.py
tests/security/: test_audit_file_permissions.py  test_audit_logger.py  test_audit_retention.py  test_audit_signing.py  test_audit_verify.py  test_broker_gate.py  test_ed25519_signing.py  test_escalation_view.py  test_fuzz_validators.py  test_guarded_tool.py  test_no_tool_bypass.py  test_path_traversal.py  test_policy_bundle.py  test_policy_engine.py  test_policy_report_mode.py  test_report_pdf_hardening.py  test_sandbox.py  test_status_page_escaping.py
tests/unit/: test_agent_input_validation.py  test_agent_versioning.py  test_audit_maintenance.py  test_build_status_page.py  test_check_locks.py  test_citations.py  test_embeddings.py  test_generate_sbom.py  test_kb_search.py  test_mcp_server.py  test_mcp_transport.py  test_pdf_report.py  test_qdrant_factory.py  test_rag.py  test_refresh_locks.py  test_vector_store.py
workflows/: OPERATOR_WORKFLOWS.md
(+62 files in other folders)
