# pyproject.toml — AI Operator Cyber Command Center
# Tooling config for the quality gates defined in AGENTS.md §7-§8.
# Keep this file and .pre-commit-config.yaml in sync with the CI pipeline.

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "rag*", "mcp*", "dashboard*", "scripts*"]
exclude = ["tests*"]

[project]
name = "ai-operator-cyber-command-center"
version = "1.8.0"
description = "Portfolio-grade environment for AI ops, cybersecurity automation, RAG, and agentic workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ivan Rozenblad" }]

# Pin runtime deps here as the project grows. Justify each addition per AGENTS.md §4.
dependencies = []

[project.optional-dependencies]
# Install with:  pip install -e ".[dev]"
dev = [
  "ruff==0.15.20",
  "mypy>=1.11",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.0",      # property-based fuzzing of validators (tests/security)
  "bandit>=1.7",
  "pip-audit>=2.7",
  "detect-secrets>=1.5",
  "pre-commit>=3.7",
  "pyyaml>=6.0",          # detections/ Sigma-rule validation tests
  "reportlab>=4.0",       # PDF incident reports (tests/unit/test_pdf_report.py)
  "cryptography>=42.0",   # Ed25519 audit-log signing (tests/security/test_ed25519_signing.py)
]

# Install with:  pip install -e ".[dashboard]"  (runs the Streamlit command center)
dashboard = [
  "streamlit>=1.36",
  "qdrant-client>=1.9",
  "sentence-transformers>=3.0",
]

# Install with:  pip install -e ".[pdf]"  (PDF export for incident reports)
# Pure-Python (no system libraries) — CI-friendly, unlike HTML/CSS engines.
pdf = [
  "reportlab>=4.0",
]

# Install with:  pip install -e ".[crypto]"  (Ed25519 asymmetric audit-log signing)
crypto = [
  "cryptography>=42.0",
]

# ---------------------------------------------------------------------------
# Ruff — lint + format (replaces flake8/isort/black)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["agents", "scripts", "rag", "mcp", "tests"]
extend-exclude = ["data", ".venv", "build", "dist"]

[tool.ruff.lint]
# A pragmatic-but-strict rule set. S = flake8-bandit (security smells caught early).
select = [
  "E", "W",    # pycodestyle
  "F",         # pyflakes
  "I",         # isort (import ordering)
  "B",         # flake8-bugbear
  "S",         # flake8-bandit (security)
  "UP",        # pyupgrade
  "C4",        # comprehensions
  "SIM",       # simplify
  "PTH",       # use pathlib over os.path
  "RUF",       # ruff-specific
]
ignore = [
  "E501",      # line length handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
# Tests may use assert and hard-coded sample values; never real secrets.
"tests/**" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy — static type checking (AGENTS.md §7 check #4)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
files = ["agents", "scripts", "tests", "dashboard", "mcp", "rag"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true
# Tighten to full strict on new modules per AGENTS.md §7.1:
#   mypy --strict <changed_module>

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "qdrant_client",
  "qdrant_client.*",
  "sentence_transformers",
  "streamlit",
  "weasyprint",
  "markdown",
  "yaml",
  "reportlab",
  "reportlab.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true

# ---------------------------------------------------------------------------
# pytest + coverage (AGENTS.md §7 check #2, §7.1 coverage gate)
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=agents",
  "--cov=rag",
  "--cov=mcp",
  "--cov-report=term-missing",
  "--cov-fail-under=85",
]
markers = [
  "unit: fast, isolated unit tests",
  "integration: cross-component tests",
  "security: authz / validation / injection / secret-leak tests (must stay green)",
]

[tool.coverage.run]
branch = true
source = ["agents", "rag", "mcp"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

# ---------------------------------------------------------------------------
# Bandit — security static analysis (AGENTS.md §7 check #5)
# ---------------------------------------------------------------------------
[tool.bandit]
# Scope mirrors the AGENTS.md command: bandit -r agents scripts
exclude_dirs = ["tests", "data", ".venv", "build", "dist"]
# Do NOT blanket-skip checks. If a finding is a true false-positive,
# suppress it inline with a justified  # nosec  comment, not here.
