# pyproject.toml — IANUA
# Tooling config for the quality gates defined in AGENTS.md §7-§8.
# Keep this file and .pre-commit-config.yaml in sync with the CI pipeline.

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "rag*", "mcp*", "dashboard*", "scripts*"]
exclude = ["tests*"]

[project]
name = "ianua"
version = "2.0.0"
description = "Portfolio-grade environment for AI ops, cybersecurity automation, RAG, and agentic workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ivan Rozenblad" }]

# Pin runtime deps here as the project grows. Justify each addition per AGENTS.md §4.
dependencies = []

[project.optional-dependencies]
# Install with:  pip install -e ".[dev]"
dev = [
  "ruff==0.15.22",
  "mypy>=2.3.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "hypothesis>=6.156.6",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "detect-secrets>=1.5",
  "pre-commit>=3.7",
  "packaging>=24.0",
  "pyyaml>=6.0",
  "reportlab>=4.0",
  "cryptography>=42.0",
]

dashboard = [
  "streamlit>=1.59.2",
  "qdrant-client>=1.9",
  "sentence-transformers>=3.0",
]

pdf = [
  "reportlab>=4.0",
]

crypto = [
  "cryptography>=42.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["agents", "scripts", "rag", "mcp", "tests"]
extend-exclude = ["data", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
  "E", "W",
  "F",
  "I",
  "B",
  "S",
  "UP",
  "C4",
  "SIM",
  "PTH",
  "RUF",
]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
files = ["agents", "scripts", "tests", "dashboard", "mcp", "rag"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
  "qdrant_client",
  "qdrant_client.*",
  "sentence_transformers",
  "streamlit",
  "weasyprint",
  "markdown",
  "yaml",
  "reportlab",
  "reportlab.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=agents",
  "--cov=rag",
  "--cov=mcp",
  "--cov-report=term-missing",
  "--cov-fail-under=85",
]
markers = [
  "unit: fast, isolated unit tests",
  "integration: cross-component tests",
  "security: authz / validation / injection / secret-leak tests (must stay green)",
]

[tool.coverage.run]
branch = true
source = ["agents", "rag", "mcp"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests", "data", ".venv", "build", "dist"]
